--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,16 +1,23 @@
-.footer{
-    background-color: rgb(6, 6, 82) !important;
-    color: white;
-    padding: 10px 10px;
+.footer {
+  background-color: rgb(6, 6, 82) !important;
+  color: white;
+  padding: 10px 10px;
 }
-.circles{
-    width: 51px;
-    height: 51px;
-    border-radius: 50%;
-    border: 1px solid rgb(255, 255, 255);
-    background-color: #fff;
-    box-shadow: 4px 3px 30px -10px black;
+.circles {
+  width: 51px;
+  height: 51px;
+  border-radius: 50%;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: #fff;
+  box-shadow: 4px 3px 30px -10px black;
+}
+a {
+  text-decoration: none;
+}
+
+@media (max-width: 592px) {
+  .icon_center {
+    width: 169px;
+    margin: auto;
   }
-  a{
-    text-decoration: none;
-  }
+}
