--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,61 +1,70 @@
-.main{
-    width: 80% !important;
+.main {
+  width: 80% !important;
 }
-.ml{
-    margin-left: 10px !important;
+.ml {
+  margin-left: 10px !important;
 }
-.btn{
-    font-size: 13px;
+.btn {
+  font-size: 13px;
 }
-.requestbtn{
-    border-color: rgb(6, 6, 82) !important;
-    color: rgb(6, 6, 82) ;
-    padding: 13px 31px !important;
+.requestbtn {
+  border-color: rgb(6, 6, 82) !important;
+  color: rgb(6, 6, 82);
+  padding: 13px 31px !important;
 }
-.joinbtn{
-    background-color: rgb(6, 6, 82)  !important;
-    color: white !important;
-    padding: 13px 18px !important;
+.requestbtn:hover {
+  background-color: rgb(6, 6, 82) !important;
+  color: white;
 }
-.pink{
-    color: rgb(212, 66, 90);
-    font-weight: 700;
+.joinbtn {
+  background-color: rgb(6, 6, 82) !important;
+  color: white !important;
+  padding: 13px 18px !important;
+}
+.pink {
+  color: rgb(212, 66, 90);
+  font-weight: 700;
 }
 
 /* dropdown css start */
-.dropdown{
-    cursor: pointer;
+.dropdown {
+  cursor: pointer;
 }
-.dropdown-menu{
-    width: 600px;
-    height: 350px;
-    margin-top: 10px;
+.dropdown-menu {
+  width: 600px;
+  height: 350px;
+  margin-top: 10px;
 }
 .dropdown .dropdown-menu {
-    transition: all 0.5s;
-    overflow: hidden;
-    transform-origin: top center;
-    transform: scale(1, 0);
-    display: block;
+  transition: all 0.5s;
+  overflow: hidden;
+  transform-origin: top center;
+  transform: scale(1, 0);
+  display: block;
+}
+.dropdown:hover .dropdown-menu {
+  transform: scale(1);
+}
+.bodytext {
+  font-size: 13px;
+}
+.image {
+  border-radius: 20px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+.learnnmore a {
+  color: rgb(212, 66, 90);
+}
+@media (max-width: 1092px) {
+  .main {
+    width: 100% !important;
   }
-  .dropdown:hover .dropdown-menu {
-    transform: scale(1);
+}
+@media (max-width: 592px) {
+  .main {
+    margin-top: 0px !important;
   }
-  .bodytext{
-    font-size: 13px;
-  }
-  .image{
-    border-radius: 20px;
-  }
-  a{
-    text-decoration: none;
-    color: black;
-  }
-  .learnnmore a{
-    color: rgb(212, 66, 90);
-  }
-  @media (max-width: 1092px) {
-    .main{
-      width: 100% !important;
-    }
-    }
+}
